# ducttape

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
ducttape-godot/: Anvil.png.import  Player.tscn  background.tres  bevy_app_singleton.tscn  foreground.tres  hud.tscn  icon.svg.import  inventory slot.png.import  menu background.png.import  menu.tscn  native.gdextension  native.gdextension.uid  obstacles.tres  player_stand.png.import  project.godot
ducttape-godot/addons/godot-rapier2d/: faucet_2d.gd.uid  fluid_2d_circle.gd.uid  fluid_2d_rectangle.gd.uid  fluid_2d_renderer.gd.uid  fluid_2d_shader_renderer.gd.uid  godot-rapier2d.gdextension.uid  rapier_state_2d.gd.uid  water_shader.gdshader.uid
ducttape-godot/assets/: anvil.aseprite  ducttape.aseprite  inventory.aseprite  rope.aseprite  slot.aseprite  spear.aseprite  stick.aseprite
ducttape-godot/assets/gui/: inventory.png.import  slot.png.import
ducttape-godot/assets/gui/anvil/: anvil.png.import  overlay_empty.png.import  overlay_spear.png.import  prototype_spear_tipt.png.import
ducttape-godot/assets/item/ducttape/: ducttape.png.import
ducttape-godot/assets/item/rope/: rope.png.import
ducttape-godot/assets/item/spear/: template.toml  tip:rock.png.import  tip:stick.png.import
ducttape-godot/assets/item/stick/: stick.png.import
ducttape-godot/levels/: level1.tscn
ducttape-item-engine/: Cargo.toml  air.aseprite  missing.aseprite  rock.aseprite  tablet.aseprite
ducttape-item-engine/src/: attribute.rs  item.rs  lib.rs
ducttape-item-engine/src/prelude_items/: air.rs  dev_tablet.rs  mod.rs  rock.rs  stats.rs
ducttape-item-engine/src/text_renderer/: ansi_renderer.rs  bbcode_renderer.rs  mod.rs
ducttape_native/: Cargo.toml
ducttape_native/src/: game_entities.rs  lib.rs  player.rs
ducttape_native/src/commands/: mod.rs  teleport.rs
ducttape_native/src/hud/: console.rs  inventory.rs  mod.rs
ducttape_native/src/item/: mod.rs  rope.rs
ducttape_native/src/remote/: dbus_remote_provider.rs  mod.rs
ducttape_native/src/singletons/: inventory.rs
ducttape_native/src/template/: loader.rs
