[package]
name = "ducttape-item-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["prelude-items"]
prelude-items = []

[dependencies]
godot = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.12.1", features = ["fast-rng", "v4"] }
valence_text = "0.2.0-alpha.1"
