[package]
name = "ducttape_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_godot4 = { git = "https://github.com/Endercass/bevy_godot4", branch = "main" }
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
] }
ducttape-item-engine = { version = "0.1.0", path = "../ducttape-item-engine" }
godot = { version = "0.2.3", features = ["experimental-threads"] }
uuid = { version = "1.12.1", features = ["v4"] }
valence_text = "0.2.0-alpha.1"
lazy_static = "1.5.0"
zbus = { version = "5.5.0" }
paste = "1.0.15"
serde = { version = "1.0.218", features = ["derive"] }
hex_color = { version = "3.0.0", features = ["serde"] }
toml = "0.8.20"
image = { version = "0.25.5", default-features = false, features = ["rayon", "png"] }
ndarray = "0.16.1"
dyn-clone = "1.0.18"
maplit = "1.0.2"
